--- a/NFC-UI/.classpath
+++ b/NFC-UI/.classpath
@@ -2,5 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/NFC-Logic"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/NFC-Models"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
